debezium/dbz#1713 Add `CurrentMinedLogCount` metric
Signed-off-by: Chris Cranford <chris@hibernate.org>